--- a/links.html
+++ b/links.html
@@ -285,6 +285,15 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
+								<div class="stories__slide" title="kt01022020">
+									<a href="./tags/./kt01022020.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/kt01022020.png);"></div>
+										<div class="stories__slide-txt" style="		color: #243154;
+">kt01022020</div>
+									</a>
+								</div>
+							</div>
+							<div class="swiper-slide">
 								<div class="stories__slide" title="декомпозиция">
 									<a href="./tags/./dekompozitsiya.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/dekompozitsiya.png);"></div>
@@ -387,7 +396,7 @@ color: #C6BB73;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>172</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75148256_157308765365063_6723412256602712267_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=pFMqY40lu44AX-cIE4-&oh=0329d82d9f8e755be3e172614e424b00&oe=5ED40CEA" alt="✊ Үй сатудағы 3/3 құпиясы">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75148256_157308765365063_6723412256602712267_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=MfH5lWGleP0AX-Z5MIo&oh=15740b19d8e065087ae68647b2d4b5c0&oe=5ED40CEA" alt="✊ Үй сатудағы 3/3 құпиясы">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #243154;
@@ -407,7 +416,7 @@ color: #C6BB73;
 								<a href="./posts/./xx-zharnama-zhіbermey-xx-tap-1.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>161</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>162</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/82697574_2488574724803465_3332618556511582612_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=j2KAKgd8FKgAX8ZSGhc&oh=4e80bcfc28c3af05fd0cfa2e31e256a5&oe=5ED5DB71" alt="💰 Жарнама жібермей 🍋 тап!">
 									</div>
