--- a/links.html
+++ b/links.html
@@ -394,9 +394,9 @@ color: #C6BB73;
 								<a href="./posts/./x-үy-satudaғy-3x3-құpiyasy.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>172</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>173</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75148256_157308765365063_6723412256602712267_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=MfH5lWGleP0AX-Z5MIo&oh=15740b19d8e065087ae68647b2d4b5c0&oe=5ED40CEA" alt="✊ Үй сатудағы 3/3 құпиясы">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75148256_157308765365063_6723412256602712267_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=gZiP_f18-jEAX8bn9-o&oh=8ccfd79dfe03c2cdcc3f11d2902117ce&oe=5ED40CEA" alt="✊ Үй сатудағы 3/3 құпиясы">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #243154;
@@ -438,7 +438,7 @@ color: #C6BB73;
 								<a href="./posts/./xxүy-satudyң-3x2-құpiyasy.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>153</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>154</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/71851985_408537836745398_1783606332378097787_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=JqeRYtn-oocAX8LNRcP&oh=40eb77185ec0051c9b6e1cef514f5e89&oe=5EDA9D2E" alt="☝️Үй сатудың 3/2 құпиясы">
 									</div>
@@ -449,7 +449,7 @@ color: #C6BB73;
 								<a href="./posts/./arman---maқsat---іs--әreket--.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>151</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>153</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75284446_193327011825233_3477503653942516291_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=cbaaA6_5-7kAX-IGtc8&oh=6078ed951b6c015b143cadb03fdd300a&oe=5ED9AAD7" alt="АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ->">
 									</div>
@@ -468,16 +468,16 @@ color: #C6BB73;
 		color: #243154;
 ">⚠️ Пост салуға уақыт жоқ!</div>
 								</a>
-								<a href="./posts/./xx-zharnama-zhіbermey-xx-tap-2.html" class="article-more__item">
+								<a href="./posts/./xx-қayyrly-kүn-қalayyқx-mұnda.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>134</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82344041_472286830346589_2121484091507824806_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=fyH5VchiKqwAX_c-FUL&oh=a51add81c61db73b38e8b005086599ee&oe=5EC29881" alt="🤑 Жарнама жібермей 🍋 тап!">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=Bu0rLQdpxaIAX-4F26Q&oh=c25cfccb3fe3af36727ef03ff1255c7d&oe=5EC50B1F" alt="👋 Қайырлы күн Қалайық, Мұнда">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #243154;
-">🤑 Жарнама жібермей 🍋 тап!</div>
+">👋 Қайырлы күн Қалайық, Мұнда</div>
 								</a>
 							</div>
 						</div>
