--- a/links.html
+++ b/links.html
@@ -64,7 +64,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/76875187_439920826914475_1495386447144812544_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=UYmS2oSAqtYAX9MRSnP&oh=32275aa843b6040c90b85da066afef0d&oe=5ED77ACC" alt="😁 Арманшыл Саят"></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/76875187_439920826914475_1495386447144812544_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=v29McJ5u3l4AX_NFJFT&oh=b00912eeddca37cbe9274f15c50e186f&oe=5ED77ACC" alt="😁 Арманшыл Саят"></div>
 							<div class="header__logo-txt">sayatahmethan_</div>
 						</a>
 						<div class="header__title">😁 Арманшыл Саят</div>
@@ -86,6 +86,15 @@
 				<div class="stories__slider-wrap">
 					<div class="stories__slider" id="js-stories-slider">
 						<div class="swiper-wrapper">
+							<div class="swiper-slide">
+								<div class="stories__slide" title="Последнее">
+									<a href="index.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/Poslednee.png);"></div>
+										<div class="stories__slide-txt" style="		color: #243154;
+">Последнее</div>
+									</a>
+								</div>
+							</div>
 							<div class="swiper-slide">
 								<div class="stories__slide" title="құпия">
 									<a href="./tags/./құpiya.html">
@@ -177,20 +186,20 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="ктkazak">
-									<a href="./tags/./ktkazak.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/ktkazak.png);"></div>
-										<div class="stories__slide-txt" style="		color: #243154;
-">ктkazak</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
 								<div class="stories__slide" title="ktбақыт">
 									<a href="./tags/./ktbaқyt.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/ktbaқyt.png);"></div>
 										<div class="stories__slide-txt" style="		color: #243154;
 ">ktбақыт</div>
+									</a>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="stories__slide" title="ктkazak">
+									<a href="./tags/./ktkazak.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/ktkazak.png);"></div>
+										<div class="stories__slide-txt" style="		color: #243154;
+">ктkazak</div>
 									</a>
 								</div>
 							</div>
@@ -396,7 +405,7 @@ color: #C6BB73;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>173</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75148256_157308765365063_6723412256602712267_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=gZiP_f18-jEAX8bn9-o&oh=8ccfd79dfe03c2cdcc3f11d2902117ce&oe=5ED40CEA" alt="✊ Үй сатудағы 3/3 құпиясы">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75148256_157308765365063_6723412256602712267_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=uHpSbIrfopwAX8xMGRz&oh=9cf4d4a2914ef373d06aaeb3a0d64fc5&oe=5ED40CEA" alt="✊ Үй сатудағы 3/3 құпиясы">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #243154;
@@ -405,9 +414,9 @@ color: #C6BB73;
 								<a href="./posts/./zhaңalyқtyң-kөkesіx-tөmengі.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>167</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>168</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75586246_166073588054248_6776733106266702904_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=HmZx7_W8d98AX8riKul&oh=b1cd48ced0b359f11a3990d772519ed1&oe=5ED0C768" alt="Жаңалықтың көкесі, төменгі">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75586246_166073588054248_6776733106266702904_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=NuRoHT2Pr54AX-VYGSN&oh=36d9489f8a9fe39e2dff42e138448f47&oe=5ED0C768" alt="Жаңалықтың көкесі, төменгі">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #243154;
@@ -416,42 +425,42 @@ color: #C6BB73;
 								<a href="./posts/./xx-zharnama-zhіbermey-xx-tap-1.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>162</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>163</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/82697574_2488574724803465_3332618556511582612_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=SgSVXKi2-LcAX82Zwx_&oh=4ba95d2d6453d8e98b45bf5b9a3ce07a&oe=5ED5DB71" alt="💰 Жарнама жібермей 🍋 тап!">
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/82697574_2488574724803465_3332618556511582612_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=KH8GPDh2WX8AX8qD-CN&oh=f9d12089215b36f5141187c7ff7b896b&oe=5ED5DB71" alt="💰 Жарнама жібермей 🍋 тап!">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #243154;
 ">💰 Жарнама жібермей 🍋 тап!</div>
 								</a>
-								<a href="./posts/./xxүy-satudyң-3x2-құpiyasy.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>154</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/71851985_408537836745398_1783606332378097787_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=JqeRYtn-oocAX8LNRcP&oh=40eb77185ec0051c9b6e1cef514f5e89&oe=5EDA9D2E" alt="☝️Үй сатудың 3/2 құпиясы">
-									</div>
-									<div class="article-more__item-name" style="
-		color: #243154;
-">☝️Үй сатудың 3/2 құпиясы</div>
-								</a>
 								<a href="./posts/./xx-x2020x-zhyly-zhetken-zhetіstіkterіm.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>154</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>157</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/78813973_817282122053881_3899741372767422860_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=ryl44GtoKPYAX8FtCtW&oh=d7675cfd592915bb22bd7c2d96d019c4&oe=5EBB3AF6" alt="😊 «2020» жылы жеткен жетістіктерім">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/78813973_817282122053881_3899741372767422860_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=aw73TInBK2oAX-Bg92s&oh=f82faceab4d19e977f181118cfd8414e&oe=5EBB3AF6" alt="😊 «2020» жылы жеткен жетістіктерім">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #243154;
 ">😊 «2020» жылы жеткен жетістіктерім</div>
 								</a>
+								<a href="./posts/./xxүy-satudyң-3x2-құpiyasy.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>155</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/71851985_408537836745398_1783606332378097787_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=uwFSiUp2nVQAX9Mb_U4&oh=2c4e5d6e12cdb48d97c9314df45ce538&oe=5EDA9D2E" alt="☝️Үй сатудың 3/2 құпиясы">
+									</div>
+									<div class="article-more__item-name" style="
+		color: #243154;
+">☝️Үй сатудың 3/2 құпиясы</div>
+								</a>
 								<a href="./posts/./arman---maқsat---іs--әreket--.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>153</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>154</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75284446_193327011825233_3477503653942516291_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=cbaaA6_5-7kAX-IGtc8&oh=6078ed951b6c015b143cadb03fdd300a&oe=5ED9AAD7" alt="АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ->">
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75284446_193327011825233_3477503653942516291_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=0XVzSm9WMXYAX_54hAk&oh=088ee01f6fc0771201ba13b2cb4e5708&oe=5ED9AAD7" alt="АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ->">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #243154;
@@ -460,24 +469,24 @@ color: #C6BB73;
 								<a href="./posts/./xx-post-saluғa-uaқyt-zhoқ.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>145</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>147</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/77401446_778145799273103_7373557858853546984_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=mBGVQHVwPsUAX8rjVpT&oh=6d4df4c064fdc03a00e0900def1d5d33&oe=5ED1BA3C" alt="⚠️ Пост салуға уақыт жоқ!">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/77401446_778145799273103_7373557858853546984_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=BtwByA9DP2MAX8tXMLt&oh=075bb8b2b5cee6400aa47eb1e1417576&oe=5ED1BA3C" alt="⚠️ Пост салуға уақыт жоқ!">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #243154;
 ">⚠️ Пост салуға уақыт жоқ!</div>
 								</a>
-								<a href="./posts/./xx-zharnama-zhіbermey-xx-tap-2.html" class="article-more__item">
+								<a href="./posts/./xx-қayyrly-kүn-қalayyқx-mұnda.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>134</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>136</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82344041_472286830346589_2121484091507824806_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=qMOA-yin-hMAX9Ophmv&oh=1a97f6d9ed1bd8c735f7c3de46a41b31&oe=5EC29881" alt="🤑 Жарнама жібермей 🍋 тап!">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=9IeCjL0A2nAAX8g9ZZw&oh=71a96d1c3ac23d781f501c1f7f926dfe&oe=5EC50B1F" alt="👋 Қайырлы күн Қалайық, Мұнда">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #243154;
-">🤑 Жарнама жібермей 🍋 тап!</div>
+">👋 Қайырлы күн Қалайық, Мұнда</div>
 								</a>
 							</div>
 						</div>
