--- a/error.html
+++ b/error.html
@@ -45,7 +45,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./main.html" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/76875187_439920826914475_1495386447144812544_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=UYmS2oSAqtYAX9MRSnP&oh=32275aa843b6040c90b85da066afef0d&oe=5ED77ACC" alt="😁 Арманшыл Саят"></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/76875187_439920826914475_1495386447144812544_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=Sr4RNllS6ZAAX8MxDm6&oh=e51a747bebb01d31ba9b819cdba6be75&oe=5ED77ACC" alt="😁 Арманшыл Саят"></div>
 							<div class="header__logo-txt">sayatahmethan_</div>
 						</a>
 						<div class="header__title">😁 Арманшыл Саят</div>
@@ -93,72 +93,72 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>173</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75148256_157308765365063_6723412256602712267_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=gZiP_f18-jEAX8bn9-o&oh=8ccfd79dfe03c2cdcc3f11d2902117ce&oe=5ED40CEA" alt="✊ Үй сатудағы 3/3 құпиясы">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75148256_157308765365063_6723412256602712267_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=uHpSbIrfopwAX8xMGRz&oh=9cf4d4a2914ef373d06aaeb3a0d64fc5&oe=5ED40CEA" alt="✊ Үй сатудағы 3/3 құпиясы">
 							</div>
 							<div class="article-more__item-name">✊ Үй сатудағы 3/3 құпиясы</div>
 						</a>
 							<a href="./posts/./zhaңalyқtyң-kөkesіx-tөmengі.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>167</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>168</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75586246_166073588054248_6776733106266702904_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=HmZx7_W8d98AX8riKul&oh=b1cd48ced0b359f11a3990d772519ed1&oe=5ED0C768" alt="Жаңалықтың көкесі, төменгі">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75586246_166073588054248_6776733106266702904_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=QX8gVJ6dIyYAX-DoV1v&oh=f127727d27392792c91b2c371cde9961&oe=5ED0C768" alt="Жаңалықтың көкесі, төменгі">
 							</div>
 							<div class="article-more__item-name">Жаңалықтың көкесі, төменгі</div>
 						</a>
 							<a href="./posts/./xx-zharnama-zhіbermey-xx-tap-1.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>162</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>163</span>
 								</div>
-								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/82697574_2488574724803465_3332618556511582612_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=SgSVXKi2-LcAX82Zwx_&oh=4ba95d2d6453d8e98b45bf5b9a3ce07a&oe=5ED5DB71" alt="💰 Жарнама жібермей 🍋 тап!">
+								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/82697574_2488574724803465_3332618556511582612_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=fsoDaGNMx50AX9Gc-wf&oh=9ac3a3dc000f37cc16644979aecb4983&oe=5ED5DB71" alt="💰 Жарнама жібермей 🍋 тап!">
 							</div>
 							<div class="article-more__item-name">💰 Жарнама жібермей 🍋 тап!</div>
 						</a>
 							<a href="./posts/./xx-x2020x-zhyly-zhetken-zhetіstіkterіm.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>154</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>157</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/78813973_817282122053881_3899741372767422860_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=ryl44GtoKPYAX8FtCtW&oh=d7675cfd592915bb22bd7c2d96d019c4&oe=5EBB3AF6" alt="😊 «2020» жылы жеткен жетістіктерім">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/78813973_817282122053881_3899741372767422860_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=r5JjwzkJMTgAX8theli&oh=feb0446b17a8ccb54dab6d46617613df&oe=5EBB3AF6" alt="😊 «2020» жылы жеткен жетістіктерім">
 							</div>
 							<div class="article-more__item-name">😊 «2020» жылы жеткен жетістіктерім</div>
 						</a>
 							<a href="./posts/./xxүy-satudyң-3x2-құpiyasy.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>154</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>155</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/71851985_408537836745398_1783606332378097787_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=JqeRYtn-oocAX8LNRcP&oh=40eb77185ec0051c9b6e1cef514f5e89&oe=5EDA9D2E" alt="☝️Үй сатудың 3/2 құпиясы">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/71851985_408537836745398_1783606332378097787_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=lKdjeu2BXrkAX8I8Dpx&oh=24e9ca1322f1d50b2695e0fae5bf8469&oe=5F022A2E" alt="☝️Үй сатудың 3/2 құпиясы">
 							</div>
 							<div class="article-more__item-name">☝️Үй сатудың 3/2 құпиясы</div>
 						</a>
 							<a href="./posts/./arman---maқsat---іs--әreket--.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>153</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>154</span>
 								</div>
-								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75284446_193327011825233_3477503653942516291_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=cbaaA6_5-7kAX-IGtc8&oh=6078ed951b6c015b143cadb03fdd300a&oe=5ED9AAD7" alt="АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ->">
+								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75284446_193327011825233_3477503653942516291_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=AaGo2gHzy34AX_lo1CR&oh=cd3959503e0037d6e0a4318c871e71a0&oe=5F0137D7" alt="АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ->">
 							</div>
 							<div class="article-more__item-name">АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ-></div>
 						</a>
 							<a href="./posts/./xx-post-saluғa-uaқyt-zhoқ.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>145</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>147</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/77401446_778145799273103_7373557858853546984_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=mBGVQHVwPsUAX8rjVpT&oh=6d4df4c064fdc03a00e0900def1d5d33&oe=5ED1BA3C" alt="⚠️ Пост салуға уақыт жоқ!">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/77401446_778145799273103_7373557858853546984_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=3Y4oDXzzJDcAX8upjmc&oh=76bf2c762bed318a480b5a8fc9ee6350&oe=5ED1BA3C" alt="⚠️ Пост салуға уақыт жоқ!">
 							</div>
 							<div class="article-more__item-name">⚠️ Пост салуға уақыт жоқ!</div>
 						</a>
-							<a href="./posts/./xx-zharnama-zhіbermey-xx-tap-2.html" class="article-more__item">
+							<a href="./posts/./xx-қayyrly-kүn-қalayyқx-mұnda.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>134</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>136</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82344041_472286830346589_2121484091507824806_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=qMOA-yin-hMAX9Ophmv&oh=1a97f6d9ed1bd8c735f7c3de46a41b31&oe=5EC29881" alt="🤑 Жарнама жібермей 🍋 тап!">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=gn3pUeKvBx4AX8VPd12&oh=1264a8faf717dcd3d31a49efd8e4c7bf&oe=5EC50B1F" alt="👋 Қайырлы күн Қалайық, Мұнда">
 							</div>
-							<div class="article-more__item-name">🤑 Жарнама жібермей 🍋 тап!</div>
+							<div class="article-more__item-name">👋 Қайырлы күн Қалайық, Мұнда</div>
 						</a>
 						</div>
 				</div>
